Rearrange TS002 (remove temp data and console logs)

--- a/custom-report.html
+++ b/custom-report.html
@@ -24,10 +24,10 @@
 <body>
   <h1>Playwright — Custom HTML Report</h1>
   <div class="summary">
-    <strong>Started:</strong> Wed Sep 24 2025 18:28:31 GMT+0530 (India Standard Time)<br/>
-    <strong>Finished:</strong> Wed Sep 24 2025 18:30:22 GMT+0530 (India Standard Time)<br/>
-    <strong>Total:</strong> 12 &nbsp;&nbsp;
-    <strong>Passed:</strong> 7 &nbsp;&nbsp;
+    <strong>Started:</strong> Wed Sep 24 2025 19:53:27 GMT+0530 (India Standard Time)<br/>
+    <strong>Finished:</strong> Wed Sep 24 2025 19:54:00 GMT+0530 (India Standard Time)<br/>
+    <strong>Total:</strong> 1 &nbsp;&nbsp;
+    <strong>Passed:</strong> 0 &nbsp;&nbsp;
     <strong>Failed:</strong> 0 &nbsp;&nbsp;
     <strong>Skipped:</strong> 0
   </div>
@@ -46,116 +46,13 @@
     <tbody>
       
         <tr>
-          <td class="scenario"> › all › login.spec.js › TS001-Validate User Login Flow</td>
-          <td class="case">TS001_TC01 - Verify login page elements are displayed correctly</td>
-          <td class="status pass">passed</td>
-          <td class="duration">10535</td>
-          <td class="error"></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--2d2b0-nts-are-displayed-correctly-all%5Ctrace.zip" target="_blank">trace</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › login.spec.js › TS001-Validate User Login Flow</td>
-          <td class="case">TS001_TC02 - Verify registered user can login successfully</td>
-          <td class="status pass">passed</td>
-          <td class="duration">13136</td>
-          <td class="error"></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--3c997-user-can-login-successfully-all%5Ctrace.zip" target="_blank">trace</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › login.spec.js › TS001-Validate User Login Flow</td>
-          <td class="case">TS001_TC04 - Verify login with invalid password</td>
-          <td class="status pass">passed</td>
-          <td class="duration">12106</td>
-          <td class="error"></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--62bf6-login-with-invalid-password-all%5Ctrace.zip" target="_blank">trace</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › login.spec.js › TS001-Validate User Login Flow</td>
-          <td class="case">TS001_TC05 - Verify validation with empty username and valid password</td>
-          <td class="status pass">passed</td>
-          <td class="duration">13952</td>
-          <td class="error"></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--13492-username-and-valid-password-all%5Ctrace.zip" target="_blank">trace</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › login.spec.js › TS001-Validate User Login Flow</td>
-          <td class="case">TS001_TC03 - Verify login fails with invalid username and valid password</td>
+          <td class="scenario"> › all › search.spec.js › Search Functionality Tests - Authenticated User</td>
+          <td class="case">TC002_016 - Verify search functionality consistency between guest and logged-in users (using stored context)</td>
           <td class="status skip">timedOut</td>
-          <td class="duration">30912</td>
+          <td class="duration">31643</td>
           <td class="error"><details><summary>[31mTest timeout of 30000ms exceeded while running &quot;beforeEach&quot; hook.[39m</summary><pre>[31mTest timeout of 30000ms exceeded while running &quot;beforeEach&quot; hook.[39m
-    at C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\tests\login.spec.js:15:10</pre></details></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--6756d-username-and-valid-password-all%5Ctest-failed-1.png" target="_blank">screenshot</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--6756d-username-and-valid-password-all%5Cvideo.webm" target="_blank">video</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--6756d-username-and-valid-password-all%5Cerror-context.md" target="_blank">error-context</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--6756d-username-and-valid-password-all%5Ctrace.zip" target="_blank">trace</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › login.spec.js › TS001-Validate User Login Flow</td>
-          <td class="case">TS001_TC07 - Verify login with special characters in username and password</td>
-          <td class="status pass">passed</td>
-          <td class="duration">16170</td>
-          <td class="error"></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--208e8-rs-in-username-and-password-all%5Ctrace.zip" target="_blank">trace</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › login.spec.js › TS001-Validate User Login Flow</td>
-          <td class="case">TS001_TC06 - Verify login with empty fields</td>
-          <td class="status skip">timedOut</td>
-          <td class="duration">31066</td>
-          <td class="error"><details><summary>[31mTest timeout of 30000ms exceeded while running &quot;beforeEach&quot; hook.[39m</summary><pre>[31mTest timeout of 30000ms exceeded while running &quot;beforeEach&quot; hook.[39m
-    at C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\tests\login.spec.js:15:10</pre></details></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--e2bfb-ify-login-with-empty-fields-all%5Ctest-failed-1.png" target="_blank">screenshot</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--e2bfb-ify-login-with-empty-fields-all%5Cvideo.webm" target="_blank">video</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--e2bfb-ify-login-with-empty-fields-all%5Cerror-context.md" target="_blank">error-context</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--e2bfb-ify-login-with-empty-fields-all%5Ctrace.zip" target="_blank">trace</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › login.spec.js › TS001-Validate User Login Flow</td>
-          <td class="case">TS001_TC08 - Verify login with different case combinations</td>
-          <td class="status skip">timedOut</td>
-          <td class="duration">37472</td>
-          <td class="error"><details><summary>[31mTest timeout of 30000ms exceeded while running &quot;beforeEach&quot; hook.[39m</summary><pre>[31mTest timeout of 30000ms exceeded while running &quot;beforeEach&quot; hook.[39m
-    at C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\tests\login.spec.js:15:10</pre></details></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--a4f7f-different-case-combinations-all%5Cvideo.webm" target="_blank">video</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--a4f7f-different-case-combinations-all%5Cerror-context.md" target="_blank">error-context</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--a4f7f-different-case-combinations-all%5Ctrace.zip" target="_blank">trace</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › login.spec.js › TS001-Validate User Login Flow</td>
-          <td class="case">TS001_TC09 - Verify user session management after login</td>
-          <td class="status skip">timedOut</td>
-          <td class="duration">33137</td>
-          <td class="error"><details><summary>[31mTest timeout of 30000ms exceeded while running &quot;beforeEach&quot; hook.[39m</summary><pre>[31mTest timeout of 30000ms exceeded while running &quot;beforeEach&quot; hook.[39m
-    at C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\tests\login.spec.js:15:10</pre></details></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--c8428-sion-management-after-login-all%5Ctest-failed-1.png" target="_blank">screenshot</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--c8428-sion-management-after-login-all%5Cvideo.webm" target="_blank">video</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--c8428-sion-management-after-login-all%5Cerror-context.md" target="_blank">error-context</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--c8428-sion-management-after-login-all%5Ctrace.zip" target="_blank">trace</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › login.spec.js › TS001-Validate User Login Flow</td>
-          <td class="case">TS001_TC10 - Verify behavior after multiple failed login attempts</td>
-          <td class="status pass">passed</td>
-          <td class="duration">18668</td>
-          <td class="error"></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--60166-tiple-failed-login-attempts-all%5Ctrace.zip" target="_blank">trace</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › login.spec.js › TS001-Validate User Login Flow</td>
-          <td class="case">TS001_TC12 - Verify login redirection from checkout page</td>
-          <td class="status pass">passed</td>
-          <td class="duration">13332</td>
-          <td class="error"></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--75575-irection-from-checkout-page-all%5Ctrace.zip" target="_blank">trace</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › login.spec.js › TS001-Validate User Login Flow</td>
-          <td class="case">TS001_TC11 - Verify login session timeout</td>
-          <td class="status skip">timedOut</td>
-          <td class="duration">30907</td>
-          <td class="error"><details><summary>[31mTest timeout of 30000ms exceeded while running &quot;beforeEach&quot; hook.[39m</summary><pre>[31mTest timeout of 30000ms exceeded while running &quot;beforeEach&quot; hook.[39m
-    at C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\tests\login.spec.js:15:10</pre></details></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--9f84f-erify-login-session-timeout-all%5Ctest-failed-1.png" target="_blank">screenshot</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--9f84f-erify-login-session-timeout-all%5Cvideo.webm" target="_blank">video</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--9f84f-erify-login-session-timeout-all%5Cerror-context.md" target="_blank">error-context</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Clogin-TS001-Validate-User--9f84f-erify-login-session-timeout-all%5Ctrace.zip" target="_blank">trace</a></div></td>
+    at C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\tests\search.spec.js:267:10</pre></details></td>
+          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Csearch-Search-Functionalit-13db4-users-using-stored-context--all%5Ctest-failed-1.png" target="_blank">screenshot</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Csearch-Search-Functionalit-13db4-users-using-stored-context--all%5Cvideo.webm" target="_blank">video</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5Csearch-Search-Functionalit-13db4-users-using-stored-context--all%5Ctrace.zip" target="_blank">trace</a></div></td>
         </tr>
     </tbody>
   </table>
