Resolve TS004-TC003

--- a/custom-report.html
+++ b/custom-report.html
@@ -24,11 +24,11 @@
 <body>
   <h1>Playwright — Custom HTML Report</h1>
   <div class="summary">
-    <strong>Started:</strong> Wed Sep 24 2025 22:53:05 GMT+0530 (India Standard Time)<br/>
-    <strong>Finished:</strong> Wed Sep 24 2025 22:54:06 GMT+0530 (India Standard Time)<br/>
-    <strong>Total:</strong> 21 &nbsp;&nbsp;
+    <strong>Started:</strong> Wed Sep 24 2025 23:38:39 GMT+0530 (India Standard Time)<br/>
+    <strong>Finished:</strong> Wed Sep 24 2025 23:39:11 GMT+0530 (India Standard Time)<br/>
+    <strong>Total:</strong> 1 &nbsp;&nbsp;
     <strong>Passed:</strong> 0 &nbsp;&nbsp;
-    <strong>Failed:</strong> 3 &nbsp;&nbsp;
+    <strong>Failed:</strong> 0 &nbsp;&nbsp;
     <strong>Skipped:</strong> 0
   </div>
 
@@ -46,115 +46,12 @@
     <tbody>
       
         <tr>
-          <td class="scenario"> › all › Checkout.spec.js › Checkout Functionality Tests - TS003</td>
-          <td class="case">TS003_TC02 - Verify single product checkout flow as logged-in user</td>
-          <td class="status fail">failed</td>
-          <td class="duration">11092</td>
-          <td class="error"><details><summary>TimeoutError: locator.waitFor: Timeout 10000ms exceeded.
-Call log:
-[2m  - waiting for getByRole('link', { name: 'Login or register' }) to be visible[22m
-</summary><pre>TimeoutError: locator.waitFor: Timeout 10000ms exceeded.
-Call log:
-[2m  - waiting for getByRole('link', { name: 'Login or register' }) to be visible[22m
-
-    at HomePage.clickLoginOrRegister (C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\pages\HomePage.js:47:40)
-    at Object.addProductToCartWithLogin (C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\fixtures\addProductToCartFixture.js:64:24)
-    at C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\tests\Checkout.spec.js:52:35</pre></details></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-8090c-kout-flow-as-logged-in-user-all%5Ctest-failed-1.png" target="_blank">screenshot</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-8090c-kout-flow-as-logged-in-user-all%5Cvideo.webm" target="_blank">video</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › Checkout.spec.js › Checkout Functionality Tests - TS003</td>
-          <td class="case">TS003_TC03 - Verify checkout with product quantity modification</td>
-          <td class="status fail">failed</td>
-          <td class="duration">21527</td>
-          <td class="error"><details><summary>Error: Authentication failed - redirected to login page</summary><pre>Error: Authentication failed - redirected to login page
-    at CheckoutPage.navigateToCheckout (C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\pages\CheckoutPage.js:42:19)
-    at C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\tests\Checkout.spec.js:87:5</pre></details></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-75667-oduct-quantity-modification-all%5Ctest-failed-1.png" target="_blank">screenshot</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-75667-oduct-quantity-modification-all%5Cvideo.webm" target="_blank">video</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-75667-oduct-quantity-modification-all%5Cerror-context.md" target="_blank">error-context</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › Checkout.spec.js › Checkout Functionality Tests - TS003</td>
-          <td class="case">TS003_TC04 - Verify checkout with product removal during process</td>
-          <td class="status fail">failed</td>
-          <td class="duration">19654</td>
-          <td class="error"><details><summary>Error: Authentication failed - redirected to login page</summary><pre>Error: Authentication failed - redirected to login page
-    at CheckoutPage.navigateToCheckout (C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\pages\CheckoutPage.js:42:19)
-    at C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\tests\Checkout.spec.js:116:5</pre></details></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-8a2c4-duct-removal-during-process-all%5Ctest-failed-1.png" target="_blank">screenshot</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-8a2c4-duct-removal-during-process-all%5Cvideo.webm" target="_blank">video</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-8a2c4-duct-removal-during-process-all%5Cerror-context.md" target="_blank">error-context</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › Checkout.spec.js › Checkout Functionality Tests - TS003</td>
-          <td class="case">TS003_TC01 - Verify single product checkout flow as guest user</td>
+          <td class="scenario"> › all › Checkout.spec.js › Checkout Functionality Tests - TS004</td>
+          <td class="case">TS004_TC03 - Verify checkout with product quantity modification</td>
           <td class="status skip">timedOut</td>
-          <td class="duration">40518</td>
+          <td class="duration">30633</td>
           <td class="error"><details><summary>[31mTest timeout of 30000ms exceeded.[39m</summary><pre>[31mTest timeout of 30000ms exceeded.[39m</pre></details></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-df044-checkout-flow-as-guest-user-all%5Ctest-failed-1.png" target="_blank">screenshot</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-df044-checkout-flow-as-guest-user-all%5Cvideo.webm" target="_blank">video</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-df044-checkout-flow-as-guest-user-all%5Cerror-context.md" target="_blank">error-context</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › Checkout.spec.js › Checkout Functionality Tests - TS003</td>
-          <td class="case">TS003_TC05 - Verify checkout with valid shipping address</td>
-          <td class="status skip">timedOut</td>
-          <td class="duration">30239</td>
-          <td class="error"><details><summary>[31mTest timeout of 30000ms exceeded.[39m</summary><pre>[31mTest timeout of 30000ms exceeded.[39m</pre></details></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-68b3a-with-valid-shipping-address-all%5Ctest-failed-1.png" target="_blank">screenshot</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-68b3a-with-valid-shipping-address-all%5Cvideo.webm" target="_blank">video</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-68b3a-with-valid-shipping-address-all%5Cerror-context.md" target="_blank">error-context</a></div></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › Checkout.spec.js › Checkout Functionality Tests - TS003</td>
-          <td class="case">TS003_TC07 - Verify checkout with multiple shipping options</td>
-          <td class="status skip">interrupted</td>
-          <td class="duration">16569</td>
-          <td class="error"><details><summary>Error: page.goto: Target page, context or browser has been closed
-Call log:
-[2m  - navigating to &quot;https://automationteststore.com/index.php?rt=checkout/cart&quot;, waiting until &quot;load&quot;[22m
-</summary><pre>Error: page.goto: Target page, context or browser has been closed
-Call log:
-[2m  - navigating to &quot;https://automationteststore.com/index.php?rt=checkout/cart&quot;, waiting until &quot;load&quot;[22m
-
-    at CartPage.navigateToCart (C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\pages\CartPage.js:23:25)
-    at Object.verifyProductInCart (C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\fixtures\addProductToCartFixture.js:110:24)
-    at C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\tests\Checkout.spec.js:193:35</pre></details></td>
-          <td class="attachments"></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › Checkout.spec.js › Checkout Functionality Tests - TS003</td>
-          <td class="case">TS003_TC06 - Verify checkout with invalid shipping address</td>
-          <td class="status skip">interrupted</td>
-          <td class="duration">25414</td>
-          <td class="error"><details><summary>Error: Navigation to product 50 failed: page.goto: Target page, context or browser has been closed
-Call log:
-[2m  - navigating to &quot;https://automationteststore.com/index.php?rt=product/product&amp;product_id=50&quot;, waiting until &quot;domcontentloaded&quot;[22m
-</summary><pre>Error: Navigation to product 50 failed: page.goto: Target page, context or browser has been closed
-Call log:
-[2m  - navigating to &quot;https://automationteststore.com/index.php?rt=product/product&amp;product_id=50&quot;, waiting until &quot;domcontentloaded&quot;[22m
-
-    at ProductPage.navigateToProduct (C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\pages\ProductPage.js:50:19)
-    at Object.addSpecificProductToCart (C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\fixtures\addProductToCartFixture.js:26:9)
-    at C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\tests\Checkout.spec.js:163:5</pre></details></td>
-          <td class="attachments"></td>
-        </tr>
-
-        <tr>
-          <td class="scenario"> › all › Checkout.spec.js › Checkout Functionality Tests - TS003</td>
-          <td class="case">TS003_TC08 - Verify checkout with free shipping threshold</td>
-          <td class="status skip">interrupted</td>
-          <td class="duration">3980</td>
-          <td class="error"><details><summary>Error: Navigation to product 50 failed: page.goto: Target page, context or browser has been closed
-Call log:
-[2m  - navigating to &quot;https://automationteststore.com/index.php?rt=product/product&amp;product_id=50&quot;, waiting until &quot;domcontentloaded&quot;[22m
-</summary><pre>Error: Navigation to product 50 failed: page.goto: Target page, context or browser has been closed
-Call log:
-[2m  - navigating to &quot;https://automationteststore.com/index.php?rt=product/product&amp;product_id=50&quot;, waiting until &quot;domcontentloaded&quot;[22m
-
-    at ProductPage.navigateToProduct (C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\pages\ProductPage.js:50:19)
-    at Object.addSpecificProductToCart (C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\fixtures\addProductToCartFixture.js:26:9)
-    at C:\Users\Acer\Desktop\InterviewAss\sonasu\UIAutomation\tests\Checkout.spec.js:224:5</pre></details></td>
-          <td class="attachments"></td>
+          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-9aed1-oduct-quantity-modification-all%5Ctest-failed-1.png" target="_blank">screenshot</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-9aed1-oduct-quantity-modification-all%5Cvideo.webm" target="_blank">video</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-9aed1-oduct-quantity-modification-all%5Cerror-context.md" target="_blank">error-context</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-9aed1-oduct-quantity-modification-all%5Ctrace.zip" target="_blank">trace</a></div></td>
         </tr>
     </tbody>
   </table>
