--- a/custom-report.html
+++ b/custom-report.html
@@ -24,10 +24,10 @@
 <body>
   <h1>Playwright — Custom HTML Report</h1>
   <div class="summary">
-    <strong>Started:</strong> Wed Sep 24 2025 23:38:39 GMT+0530 (India Standard Time)<br/>
-    <strong>Finished:</strong> Wed Sep 24 2025 23:39:11 GMT+0530 (India Standard Time)<br/>
+    <strong>Started:</strong> Thu Sep 25 2025 07:54:27 GMT+0530 (India Standard Time)<br/>
+    <strong>Finished:</strong> Thu Sep 25 2025 07:54:44 GMT+0530 (India Standard Time)<br/>
     <strong>Total:</strong> 1 &nbsp;&nbsp;
-    <strong>Passed:</strong> 0 &nbsp;&nbsp;
+    <strong>Passed:</strong> 1 &nbsp;&nbsp;
     <strong>Failed:</strong> 0 &nbsp;&nbsp;
     <strong>Skipped:</strong> 0
   </div>
@@ -47,11 +47,11 @@
       
         <tr>
           <td class="scenario"> › all › Checkout.spec.js › Checkout Functionality Tests - TS004</td>
-          <td class="case">TS004_TC03 - Verify checkout with product quantity modification</td>
-          <td class="status skip">timedOut</td>
-          <td class="duration">30633</td>
-          <td class="error"><details><summary>[31mTest timeout of 30000ms exceeded.[39m</summary><pre>[31mTest timeout of 30000ms exceeded.[39m</pre></details></td>
-          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-9aed1-oduct-quantity-modification-all%5Ctest-failed-1.png" target="_blank">screenshot</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-9aed1-oduct-quantity-modification-all%5Cvideo.webm" target="_blank">video</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-9aed1-oduct-quantity-modification-all%5Cerror-context.md" target="_blank">error-context</a></div><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-9aed1-oduct-quantity-modification-all%5Ctrace.zip" target="_blank">trace</a></div></td>
+          <td class="case">TS004_TC10 - Verify order summary with product discount</td>
+          <td class="status pass">passed</td>
+          <td class="duration">15097</td>
+          <td class="error"></td>
+          <td class="attachments"><div><a href="C:%5CUsers%5CAcer%5CDesktop%5CInterviewAss%5Csonasu%5CUIAutomation%5Ctest-results%5CCheckout-Checkout-Function-fe924-mmary-with-product-discount-all%5Ctrace.zip" target="_blank">trace</a></div></td>
         </tr>
     </tbody>
   </table>
